--- a/index.html
+++ b/index.html
@@ -3,109 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline Notes - Google Photos Style</title>
+    <title>Timeline Text Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/dexie/dist/dexie.js"></script>
     <style>
-        body { background-color: #f8f9fa; }
-        .sticky-header { position: sticky; top: 0; z-index: 10; background: rgba(248, 249, 250, 0.9); backdrop-filter: blur(5px); }
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+        body { font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
+        .hide-scrollbar::-webkit-scrollbar { display: none; }
+        .sticky-date { position: sticky; top: 64px; z-index: 10; background: rgba(243, 244, 246, 0.9); backdrop-filter: blur(8px); }
     </style>
 </head>
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
-        const { useState, useEffect } = React;
+        const { useState, useEffect, useMemo } = React;
 
-        function TimelineApp() {
-            // Khởi tạo dữ liệu mẫu
-            const [notes, setNotes] = useState([
-                { id: 1, content: "Bắt đầu xây dựng ứng dụng lưu trữ văn bản theo dòng thời gian.", date: "2026-01-10", time: "08:00" },
-                { id: 2, content: "Google Photos có giao diện rất thông minh, mình sẽ học tập cách họ nhóm ảnh theo ngày.", date: "2026-01-10", time: "09:30" },
-                { id: 3, content: "Hôm qua mình đã hoàn thành xong phần ý tưởng.", date: "2026-01-09", time: "21:15" },
-                { id: 4, content: "Mua một cuốn sổ tay mới để ghi chép.", date: "2025-12-25", time: "14:00" }
-            ]);
+        // 1. Khởi tạo Database (IndexedDB)
+        const db = new Dexie("TimelineNotesDB");
+        db.version(1).stores({
+            notes: '++id, content, date, timestamp' // Index các trường quan trọng
+        });
 
-            const [inputValue, setInputValue] = useState("");
+        function App() {
+            const [notes, setNotes] = useState([]);
+            const [text, setText] = useState("");
+            const [searchQuery, setSearchQuery] = useState("");
 
-            // Hàm thêm ghi chú mới
-            const addNote = () => {
-                if (!inputValue.trim()) return;
-                const now = new Date();
-                const newNote = {
-                    id: Date.now(),
-                    content: inputValue,
-                    date: now.toISOString().split('T')[0],
-                    time: now.getHours() + ":" + now.getMinutes().toString().padStart(2, '0')
-                };
-                setNotes([newNote, ...notes]);
-                setInputValue("");
+            // 2. Load dữ liệu từ Database khi mở app
+            useEffect(() => {
+                loadNotes();
+            }, []);
+
+            const loadNotes = async () => {
+                const allNotes = await db.notes.orderBy('timestamp').reverse().toArray();
+                setNotes(allNotes);
             };
 
-            // Logic nhóm ghi chú theo ngày (Giống Google Photos)
-            const groupedNotes = notes.reduce((groups, note) => {
-                const date = note.date;
-                if (!groups[date]) groups[date] = [];
-                groups[date].push(note);
-                return groups;
-            }, {});
+            // 3. Hàm thêm ghi chú
+            const handleSubmit = async (e) => {
+                e.preventDefault();
+                if (!text.trim()) return;
+
+                const now = new Date();
+                const newNote = {
+                    content: text,
+                    date: now.toISOString().split('T')[0],
+                    time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
+                    timestamp: now.getTime()
+                };
+
+                await db.notes.add(newNote);
+                setText("");
+                loadNotes(); // Reload danh sách
+            };
+
+            // 4. Logic tìm kiếm và Nhóm dữ liệu (Optimization)
+            const filteredNotes = useMemo(() => {
+                return notes.filter(n => n.content.toLowerCase().includes(searchQuery.toLowerCase()));
+            }, [notes, searchQuery]);
+
+            const groupedNotes = useMemo(() => {
+                return filteredNotes.reduce((groups, note) => {
+                    const date = note.date;
+                    if (!groups[date]) groups[date] = [];
+                    groups[date].push(note);
+                    return groups;
+                }, {});
+            }, [filteredNotes]);
 
             return (
-                <div className="max-w-2xl mx-auto pb-24">
-                    {/* Header */}
-                    <header className="p-6 bg-white shadow-sm mb-6 flex justify-between items-center sticky top-0 z-20">
-                        <h1 className="text-xl font-bold text-blue-600">Timeline Notes</h1>
-                        <span className="text-sm text-gray-500">{notes.length} ghi chú</span>
+                <div className="min-h-screen pb-32">
+                    {/* Header cố định */}
+                    <header className="sticky top-0 bg-white shadow-sm z-30 px-4 py-3">
+                        <div className="max-w-2xl mx-auto flex flex-col gap-3">
+                            <div className="flex justify-between items-center">
+                                <h1 className="text-xl font-bold text-blue-600">Timeline Notes</h1>
+                                <span className="text-xs bg-gray-100 px-2 py-1 rounded-full text-gray-500 font-medium">
+                                    {filteredNotes.length} bản ghi
+                                </span>
+                            </div>
+                            <input 
+                                type="text" 
+                                placeholder="Tìm kiếm trong dòng thời gian..."
+                                className="w-full bg-gray-100 border-none rounded-lg px-4 py-2 text-sm focus:ring-2 focus:ring-blue-500 outline-none"
+                                value={searchQuery}
+                                onChange={(e) => setSearchQuery(e.target.value)}
+                            />
+                        </div>
                     </header>
 
-                    {/* Danh sách dòng thời gian */}
-                    <div className="px-4">
-                        {Object.keys(groupedNotes).sort().reverse().map(date => (
-                            <div key={date} className="mb-8">
-                                <h2 className="sticky-header py-2 text-sm font-semibold text-gray-600 uppercase tracking-wider">
-                                    {new Date(date).toLocaleDateString('vi-VN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' })}
+                    {/* Danh sách Dòng thời gian */}
+                    <main className="max-w-2xl mx-auto px-4 mt-6">
+                        {Object.keys(groupedNotes).length === 0 && (
+                            <div className="text-center py-20 text-gray-400">Chưa có ghi chú nào. Hãy bắt đầu viết!</div>
+                        )}
+
+                        {Object.keys(groupedNotes).map(date => (
+                            <section key={date} className="mb-8">
+                                <h2 className="sticky-date py-2 text-sm font-bold text-gray-500 uppercase tracking-tighter">
+                                    {new Date(date).toLocaleDateString('vi-VN', { weekday: 'long', day: '2-digit', month: '2-digit', year: 'numeric' })}
                                 </h2>
-                                <div className="grid grid-cols-1 gap-3 mt-2">
+                                <div className="space-y-3 mt-2">
                                     {groupedNotes[date].map(note => (
-                                        <div key={note.id} className="bg-white p-4 rounded-2xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow">
-                                            <div className="text-xs text-gray-400 mb-1">{note.time}</div>
-                                            <p className="text-gray-800 leading-relaxed">{note.content}</p>
+                                        <div key={note.id} className="bg-white p-4 rounded-xl shadow-sm border border-gray-200 group hover:border-blue-300 transition-all">
+                                            <div className="flex justify-between items-start mb-1">
+                                                <span className="text-[10px] font-bold text-blue-400 uppercase">{note.time}</span>
+                                                <button 
+                                                    onClick={async () => { if(confirm('Xóa?')) { await db.notes.delete(note.id); loadNotes(); } }}
+                                                    className="opacity-0 group-hover:opacity-100 text-red-400 text-xs transition-opacity"
+                                                >
+                                                    Xóa
+                                                </button>
+                                            </div>
+                                            <p className="text-gray-700 whitespace-pre-wrap leading-relaxed">{note.content}</p>
                                         </div>
                                     ))}
                                 </div>
-                            </div>
+                            </section>
                         ))}
-                    </div>
+                    </main>
 
-                    {/* Thanh nhập liệu cố định bên dưới */}
-                    <div className="fixed bottom-0 left-0 right-0 p-4 bg-white border-t border-gray-200">
-                        <div className="max-w-2xl mx-auto flex gap-2">
-                            <input 
-                                type="text" 
-                                value={inputValue}
-                                onChange={(e) => setInputValue(e.target.value)}
-                                onKeyPress={(e) => e.key === 'Enter' && addNote()}
-                                placeholder="Lưu lại điều gì đó..."
-                                className="flex-1 p-3 border border-gray-300 rounded-full px-6 focus:outline-none focus:border-blue-500"
+                    {/* Form nhập liệu chân trang */}
+                    <div className="fixed bottom-0 left-0 right-0 bg-gradient-to-t from-white via-white to-transparent pt-10 pb-6 px-4">
+                        <form onSubmit={handleSubmit} className="max-w-2xl mx-auto flex items-end gap-2 bg-white p-2 rounded-2xl shadow-2xl border border-gray-100">
+                            <textarea 
+                                rows="1"
+                                value={text}
+                                onChange={(e) => setText(e.target.value)}
+                                placeholder="Ghi chép nhanh..."
+                                className="flex-1 p-3 max-h-40 outline-none resize-none text-gray-700"
+                                onKeyDown={(e) => { if(e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleSubmit(e); } }}
                             />
-                            <button 
-                                onClick={addNote}
-                                className="bg-blue-600 text-white p-3 rounded-full w-12 h-12 flex items-center justify-center hover:bg-blue-700 shadow-lg"
-                            >
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-6 h-6">
-                                    <path strokeLinecap="round" strokeLinejoin="round" d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
+                            <button className="bg-blue-600 hover:bg-blue-700 text-white p-3 rounded-xl transition-colors shadow-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-6 h-6">
+                                    <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" />
                                 </svg>
                             </button>
-                        </div>
+                        </form>
                     </div>
                 </div>
             );
         }
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<TimelineApp />);
+        root.render(<App />);
     </script>
 </body>
 </html>
