--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cloud Timeline</title>
+    <title>My Private Timeline</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap');
         body { font-family: 'Lexend', sans-serif; background-color: #f9fafb; }
-        .sticky-date { position: sticky; top: 60px; z-index: 10; background: rgba(249, 250, 251, 0.9); backdrop-filter: blur(10px); }
+        .sticky-date { position: sticky; top: 64px; z-index: 10; background: rgba(249, 250, 251, 0.9); backdrop-filter: blur(10px); }
     </style>
 </head>
 <body>
@@ -22,108 +23,111 @@
     <script type="text/babel">
         const { useState, useEffect, useMemo } = React;
 
-        // --- 1. CẤU HÌNH FIREBASE ---
-        // DÁN TOÀN BỘ ĐOẠN "const firebaseConfig = { ... };" CỦA BẠN VÀO ĐÂY
-          const firebaseConfig = {
-            apiKey: "AIzaSyAV-XVaOyUiq1c-29VTaWjLKcEXrssnnTE",
-            authDomain: "qlhs10a7.firebaseapp.com",
-            projectId: "qlhs10a7",
-            storageBucket: "qlhs10a7.firebasestorage.app",
-            messagingSenderId: "584229565603",
-            appId: "1:584229565603:web:d47a10f0a512a1a309bb16",
-            measurementId: "G-8E5E1933DE"
-        }; 
-        // Khởi tạo Firebase
-        if (!firebase.apps.length) {
-            firebase.initializeApp(firebaseConfig);
-        }
+        // --- 1. CONFIG (Dán config của bạn vào đây) ---
+        const firebaseConfig = {
+            apiKey: "AIzaSy...", 
+            authDomain: "...",
+            projectId: "...",
+            storageBucket: "...",
+            messagingSenderId: "...",
+            appId: "..."
+        };
+
+        if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
+        const auth = firebase.auth();
+        const provider = new firebase.auth.GoogleAuthProvider();
 
         function App() {
+            const [user, setUser] = useState(null);
             const [notes, setNotes] = useState([]);
             const [text, setText] = useState("");
             const [loading, setLoading] = useState(true);
 
-            // --- 2. LẤY DỮ LIỆU TỰ ĐỘNG CẬP NHẬT ---
+            // Theo dõi trạng thái đăng nhập
             useEffect(() => {
-                const unsubscribe = db.collection("notes")
-                    .orderBy("timestamp", "desc")
-                    .onSnapshot((snapshot) => {
-                        const data = snapshot.docs.map(doc => ({
-                            id: doc.id,
-                            ...doc.data()
-                        }));
-                        setNotes(data);
-                        setLoading(false);
-                    }, (error) => {
-                        console.error("Lỗi Rules Firebase:", error);
-                        setLoading(false);
-                    });
-                return () => unsubscribe();
+                return auth.onAuthStateChanged((u) => {
+                    setUser(u);
+                    setLoading(false);
+                });
             }, []);
 
-            // --- 3. GỬI DỮ LIỆU LÊN ĐÁM MÂY ---
+            // Lấy dữ liệu theo userId
+            useEffect(() => {
+                if (!user) {
+                    setNotes([]);
+                    return;
+                }
+                const unsubscribe = db.collection("notes")
+                    .where("userId", "==", user.uid) // Chỉ lấy của mình
+                    .orderBy("timestamp", "desc")
+                    .onSnapshot((s) => {
+                        setNotes(s.docs.map(d => ({ id: d.id, ...d.data() })));
+                    });
+                return () => unsubscribe();
+            }, [user]);
+
+            const handleLogin = () => auth.signInWithPopup(provider);
+            const handleLogout = () => auth.signOut();
+
             const handleSubmit = async (e) => {
                 e.preventDefault();
-                if (!text.trim()) return;
-
+                if (!text.trim() || !user) return;
                 const now = new Date();
-                try {
-                    await db.collection("notes").add({
-                        content: text,
-                        date: now.toISOString().split('T')[0],
-                        time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
-                        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                    });
-                    setText("");
-                } catch (err) {
-                    alert("Lỗi: Hãy kiểm tra tab 'Quy tắc' trên Firebase đã để 'allow read, write: if true' chưa?");
-                }
+                await db.collection("notes").add({
+                    content: text,
+                    userId: user.uid, // Lưu thêm ID người dùng
+                    date: now.toISOString().split('T')[0],
+                    time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
+                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                });
+                setText("");
             };
 
             const groupedNotes = useMemo(() => {
                 return notes.reduce((groups, note) => {
-                    const dateStr = note.date || "Khác";
-                    if (!groups[dateStr]) groups[dateStr] = [];
-                    groups[dateStr].push(note);
+                    const d = note.date || "Khác";
+                    if (!groups[d]) groups[d] = [];
+                    groups[d].push(note);
                     return groups;
                 }, {});
             }, [notes]);
 
-            if (loading) return <div className="flex h-screen items-center justify-center text-blue-600 font-bold">ĐANG KẾT NỐI CLOUD...</div>;
+            if (loading) return <div className="flex h-screen items-center justify-center">Đang tải...</div>;
+
+            if (!user) return (
+                <div className="flex h-screen flex-col items-center justify-center p-6 text-center">
+                    <h1 className="text-3xl font-black mb-4">TIMELINE NOTES</h1>
+                    <p className="text-gray-500 mb-8">Lưu trữ dòng thời gian riêng tư của bạn</p>
+                    <button onClick={handleLogin} className="flex items-center gap-3 bg-white border border-gray-300 px-6 py-3 rounded-2xl shadow-sm hover:bg-gray-50 transition-all font-bold">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" />
+                        Đăng nhập bằng Google
+                    </button>
+                </div>
+            );
 
             return (
                 <div className="max-w-xl mx-auto pb-32">
                     <header className="sticky top-0 bg-white/70 backdrop-blur-md px-6 py-4 flex justify-between items-center z-30 border-b border-gray-100">
-                        <h1 className="text-xl font-extrabold text-gray-900 tracking-tighter">TIMELINE</h1>
-                        <div className="w-8 h-8 rounded-full bg-blue-100 flex items-center justify-center text-blue-600 text-xs font-bold">
-                            {notes.length}
+                        <div className="flex items-center gap-3">
+                            <img src={user.photoURL} className="w-8 h-8 rounded-full" title={user.displayName} />
+                            <h1 className="text-xl font-extrabold tracking-tighter">TIMELINE</h1>
                         </div>
+                        <button onClick={handleLogout} className="text-xs text-gray-400 hover:text-red-500">Đăng xuất</button>
                     </header>
 
                     <main className="px-4 mt-4">
-                        {Object.keys(groupedNotes).length === 0 && (
-                            <div className="text-center py-20 text-gray-300 italic">Chưa có dữ liệu trên đám mây...</div>
-                        )}
-
                         {Object.keys(groupedNotes).map(date => (
-                            <div key={date} className="mb-10">
-                                <h2 className="sticky-date py-3 text-sm font-black text-gray-400 uppercase tracking-widest">
-                                    {new Date(date).toLocaleDateString('vi-VN', { weekday: 'short', day: '2-digit', month: '2-digit' })}
-                                </h2>
-                                <div className="space-y-4 mt-2">
+                            <div key={date} className="mb-8">
+                                <h2 className="sticky-date py-3 text-sm font-black text-gray-400 uppercase">{date}</h2>
+                                <div className="space-y-4">
                                     {groupedNotes[date].map(note => (
-                                        <div key={note.id} className="bg-white p-5 rounded-3xl shadow-sm border border-gray-50 hover:shadow-md transition-all group">
-                                            <div className="flex justify-between items-center mb-3">
-                                                <span className="text-[10px] font-bold text-blue-500 bg-blue-50 px-2 py-0.5 rounded-full">{note.time}</span>
-                                                <button 
-                                                    onClick={() => { if(confirm('Xóa vĩnh viễn?')) db.collection("notes").doc(note.id).delete() }}
-                                                    className="opacity-0 group-hover:opacity-100 text-gray-300 hover:text-red-500 text-xs transition-all"
-                                                >
-                                                    Xóa
-                                                </button>
+                                        <div key={note.id} className="bg-white p-5 rounded-3xl shadow-sm border border-gray-50 group">
+                                            <div className="flex justify-between mb-2">
+                                                <span className="text-[10px] font-bold text-blue-500 bg-blue-50 px-2 rounded-full">{note.time}</span>
+                                                <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-red-400 text-xs transition-all">Xóa</button>
                                             </div>
-                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap font-light">{note.content}</p>
+                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap">{note.content}</p>
                                         </div>
                                     ))}
                                 </div>
@@ -131,21 +135,16 @@
                         ))}
                     </main>
 
-                    {/* Input Area */}
-                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50 to-transparent">
+                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50">
                         <form onSubmit={handleSubmit} className="max-w-xl mx-auto relative">
                             <textarea 
-                                value={text}
-                                onChange={(e) => setText(e.target.value)}
-                                onKeyDown={(e) => { if(e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleSubmit(e); } }}
-                                placeholder="Ghi chép vào dòng thời gian..."
-                                className="w-full bg-white shadow-2xl rounded-3xl p-5 pr-16 outline-none border border-gray-100 focus:border-blue-300 transition-all resize-none"
-                                rows="1"
+                                value={text} onChange={(e) => setText(e.target.value)}
+                                onKeyDown={(e) => e.key === 'Enter' && !e.shiftKey && (e.preventDefault(), handleSubmit(e))}
+                                placeholder="Viết gì đó cho hôm nay..."
+                                className="w-full bg-white shadow-2xl rounded-3xl p-5 pr-16 outline-none border border-gray-100 resize-none" rows="1"
                             />
-                            <button className="absolute right-3 bottom-3 bg-blue-600 text-white w-10 h-10 rounded-2xl flex items-center justify-center hover:bg-blue-700 shadow-lg transition-all">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-5 h-5">
-                                    <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" />
-                                </svg>
+                            <button className="absolute right-3 bottom-3 bg-blue-600 text-white w-10 h-10 rounded-2xl flex items-center justify-center hover:bg-blue-700 shadow-lg">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-5 h-5"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
                             </button>
                         </form>
                     </div>
