--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
         // --- 1. CONFIG (Dán config của bạn vào đây) ---
         const firebaseConfig = {
-            apiKey: "AIzaSy...", 
-            authDomain: "...",
-            projectId: "...",
-            storageBucket: "...",
-            messagingSenderId: "...",
-            appId: "..."
-        };
-
+          apiKey: "AIzaSyAV-XVaOyUiq1c-29VTaWjLKcEXrssnnTE",
+          authDomain: "qlhs10a7.firebaseapp.com",
+          projectId: "qlhs10a7",
+          storageBucket: "qlhs10a7.firebasestorage.app",
+          messagingSenderId: "584229565603",
+          appId: "1:584229565603:web:d47a10f0a512a1a309bb16",
+          measurementId: "G-8E5E1933DE"
+        }; 
         if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         const auth = firebase.auth();
@@ -157,3 +157,4 @@
     </script>
 </body>
 </html>
+
