--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                                                                     <span className="text-[11px] font-bold text-gray-600 truncate">{note.fileName}</span>
                                                                 </div>
                                                                 <a href={note.fileUrl} target="_blank" className="text-[10px] font-extrabold text-white bg-blue-600 px-4 py-2 rounded-xl hover:bg-blue-700 transition-colors">Mở File</a>
+                                                                    Tải xuống
+                                                                </a>
                                                             </div>
                                                         )}
                                                     </div>
@@ -259,3 +261,4 @@
     </script>
 </body>
 </html>
+
